--- a/kitdofa.html
+++ b/kitdofa.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-rPfUMy9xUg" id="header16-23">
 
     
 
@@ -102,8 +102,8 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
                     Garage Fest 2020</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-4"><p>
-                    O Garage Fest foi o primeiro festival que a Lady Newton participou. Muitos fãs não puderam ir, por isso que a gente preparou uma gravação exclusiva pra quem perdeu a nossa estreia no festival.<br><br>Uma&nbsp;playlist com 3 covers: Preciso me encontrar, Sharp dressed man e Born to be wild.</p></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><p>
+                    O Garage Fest foi o primeiro festival que a Lady Newton participou. Muitos fãs não puderam ir, por isso que a gente preparou uma gravação exclusiva pra quem perdeu a nossa estreia no festival.<br><br>Uma&nbsp;playlist com 3 covers: Preciso me encontrar, Sharp dressed man e Born to be wild. Aperta o play e escuta ai!</p></h3>
                 
             </div>
         </div>
