--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -12,7 +12,7 @@
   <title>Conheca a Lady Newton</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/icons-mind/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -54,7 +54,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="imind-business-mens mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
 
     
 
