--- a/epk.html
+++ b/epk.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Eletronic Press Kit - Material para produtores, mídia e pessoas que querem conhecer o lado sério da Lady Newton. ">
   
   <title>EPK</title>
-  <link rel="stylesheet" href="assets/icons-mind/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -53,7 +53,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="imind-business-mens mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
 
     
 
@@ -189,7 +189,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hzzv2JqZu2xH+ZdX6foSL9Hf1HxUHPlNAXm7R3WgqhDLklixAKwpz89hB4Qsl1+q49vcAkI6lZu3U3axyMACQ7VlM1F6wmyva6UqR+K7oT/5huBGIiaTNa4sCbjpqNvR.dc2GyEtZV1Qu6OAJH5GGNkQGMkOiq723cvlKvkNdL7E710sSU8lcZHTHdxHL0kxjAk0cyBf/Xcl2ejf8mnY++3QF99BXg5a49bPO9LyFQ1NTa9+EzM8Xb3KcgBb3p7uv">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wTgO0D7vyc+09xJFyeHYvcRb41LUA5M7LB20MiMA4i5LAoZp+9mmCvfMlTN6SgW8t6Wb8Mn8WV4tz1EDEk8y2blijB9XTBA1mEP4E4VQIBp4EjTZM+gKQQ8uFZrMGfmN.WI+AUah58zcuC6H0qf58XuXC9N0Z/bezj7IijoMCGAeE0n6qYfhO5Mb+ObSqUa0GiDh7GP6vmgG17uJLMYeRNCEq+/rkdQPqHuIEF/xdenAETkOjuQdb+Dp5vVdFAjO4">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
