--- a/espacodofa.html
+++ b/espacodofa.html
@@ -16,7 +16,7 @@
   <title>Espaço do Fã</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/icons-mind/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -61,7 +61,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="imind-business-mens mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -202,7 +202,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CukkTs7M1ckqHMw6ppumlG02vzyhwoDoUyO7ucb/XkHwONDJXScI6+vqQUmn6ljJMGXviOOZXuKomBq9tgJlOPWwoaTzf9s0Chb0MyOMAIrcMrwt3IEZnsybZOD3GFiC.lIANoR3RQEYrFkPUZvx3z3wK9lqNCqxHHyE55lGQDwd9s/W7lRBuLTDAjM2yEb1a/mgy13+S+pMB/ASbPJlwuD+plWayISIWitCUHwtd2P82lY2omup3iMUIqGdTP1eC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oKOZrRI9ehPo6AZXQr4NE16/V1JP9RsNLcFFb0fbuxSavJcDq+Orca2ZVKEqIr11ceTefbLEtRr826q0xoUuBgjtYrElh+C6KFwakm0b/Pq+HuldmrSOARqlJE89UF86.uiHxZelFRYz3Q4DgkOpfXIVzhdDRh/Zz38EbsGvHsKrQWEgns5d3dGvbb3CwGqlU7yTPAPcr0Zo5F/qTex1uJsxbHlHDcpP3WWxujeRBn8a6lvURsAq7YkD6XwD61PQH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
