--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <title>Página Inicial</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/icons-mind/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -59,7 +59,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="imind-business-mens mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
