--- a/videos.html
+++ b/videos.html
@@ -14,7 +14,7 @@
   <meta name="description" content="Videos e Músicas da Lady Newton. Covers e Autorais, recomendamos escutar com fones de ouvido no máximo!">
   
   <title>Videos da Lady</title>
-  <link rel="stylesheet" href="assets/icons-mind/style.css">
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -56,7 +56,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="imind-business-mens mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
 
     
 
