create github pages

--- a/epk.html
+++ b/epk.html
@@ -10,8 +10,8 @@
   <meta name="description" content="Eletronic Press Kit - Material para produtores, mídia e pessoas que querem conhecer o lado sério da Lady Newton. ">
   
   <title>EPK</title>
-  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -53,7 +53,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="icon54-v2-group-1 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
+                    <a class="nav-link link text-white display-4" href="conhecaladynewton.html"><span class="mbri-user mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 249, 249);"></span>Conheça
                         </a>
                 </li>
                 <li class="nav-item">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
 
     
 
@@ -189,7 +189,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oyAbcwuXCbl5JsEdFSbWJmz2RRB528mMRShokjnAZrO2M58Aal2KcHRtITF+mQeka2PpxAWIjeb8NjlaHF6C7IffRDQduF0UF/9eopXoTy3wKpvRo4we0uI4FENh2BeQ.PffH4SuQ1BWA4nH2mjBi7LxeEZaWuMpWLj6Ge+fXI16T695LvrN8kWEl2EnM/pnzyQ+zwWe8j+XGvViuFlm2uqRL+L6OxY2ZtpvGtJg4692BKmMNcArsUkxrFDmfAWtn">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rrAhYum2AxeJGU+pJrEKfhQefnSV1bsKUYGWHoiuRs4YBReKnfr2FV9QWrpzbwy9NikB3zZ2aK0LftlbMiqEZRpTYjX/EnhGUJYq25yYAwwdpTzlVzJ19lPIWzAIO4I2.5FYXYUqr+27YRj8pZACKpS+fZOqXmuMfZGjY9j0T+zK7ukA1GpCBk07s+22YI5hSUf5DCj/czQpekb25kkG48a5M2VclmEe5xmzsFPTkN54gBzLj6BU9c+dpyCHYt5XM">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
