create github pages

--- a/espacodofa.html
+++ b/espacodofa.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -193,7 +193,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="align-center pb-2 mbr-fonts-style display-1">Entre na Lista de Fãs!</h2>
+                <h2 class="align-center pb-2 mbr-fonts-style display-1">Entre na Lista de Fãs!<br><br></h2>
                 <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">&nbsp;Põe o teu melhor email para receber o nosso KIT DIGITAL de fã da Lady Newton.<br>(Hqs em pdf, videos INÉDITOS, os melhores memes e vale brindes!)<br><br>&nbsp;Os fãs que estão na nossa lista recebem as novidades em primeira mão e tem acesso a um conteúdo diferenciado!<br><br>A gente ODEIA spam e jamais iremos inundar a sua preciosa caixa de e-mails, pode confiar :D</h3>
             </div>
         </div>
@@ -201,7 +201,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="37xqOvTNNOoHLO7TAJNIbzJf3tMzg4yG9W4uzZP8FEtEuq1uIQhGRtzR1/HHeEU0s3797rUNP16OoGqE45+MTfwgQKRi6RAyreGlnQjBPVde2vrj/P8dDtp3LiEBIISZ.Bfk7h7sz27e6Qvbbcmf92phGI4OULbUC/YsvnPKuN17ZFrZwVgBDbUGYh4z7iOJITB6kWgEzSyFR0M2RHw6CbfCxbuEucioM2kcW36/m1aF3D4DWwct/ss9qoqHGBQ7y">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zRP5zmnCND7iFk1zDNiBqkCXEjvAGGyWHxXXkbyF1c9j+nODcqrH2/MYK8u+uCLfnzo1RsYIBa2MeGR3VIBJolsXyA8KrmmlNL2qXBroNJqhNdNVSx+dKzmZy6f5ZD/k.Ud1ummKJTExv/iNHUcXVu9pndvjTjteh8p5jQALBzlyht/+/OpOG5kJ4X+kObCJ7m4kaN2T0nB85/8cWGoRaPn7KAxndVBiOO/aw+NaP5wMdGZa3OxacdQwgZUgZi6Ac">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
