create github pages

--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159536362-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rOYcTy2LbV" once="menu" id="menu1-15">
 
     
