--- a/epk.html
+++ b/epk.html
@@ -28,6 +28,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159536362-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rOYcTy2LbV" once="menu" id="menu1-15">
 
     
@@ -189,7 +204,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LKNLmPzHCf7n8nrgYCW9HFLC41+ZHWuXL9GPuq06c8pzvcv1aCXXv/9KaCx/UT0K8c8wwPtLSi4z811+bv3s5kS8ns+5j112xuV7TPKx4U/h648Mr4GpLlyeXybPojes.lGpcK/CvZG4IXwA96eZiZRaEWekOm8K51vd5KwzKTCGo4F99zcHlsvD1PgRPHtwRguvWU+fOThuEivqJUnTstU/9Vu2je1RRCuEhLABZ7UM0L8JGNunapFpbZk92xuO4">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OIElrFVRtzQuZjrgatkL2JH+NiX+USaWxWH9UWPKv9SWwlo5k/olsHDg1XjhD+fTe7NHbU63XcowMOZs0xbnwZwv6FQV1KAp0xm5SLf0l0WQ6U516PIolU9h2f5Dn8lT.s6WaHcY/TdDYwJOiYarMys25IQ/MHQlj0cP4LzDzrouiobLknSVfV96ipfZhF8hKPq5iStBW4XpBj+aOxGjZcU1XXJa7AbEHjzYLMj1rFIZCrE01xBlmav0rLllXW/O+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
