--- a/espacodofa.html
+++ b/espacodofa.html
@@ -35,6 +35,21 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159536362-1');
+</script>
+
+<!-- /Analytics -->
+
+
   <section class="menu cid-rOYcTy2LbV" once="menu" id="menu1-15">
 
     
@@ -201,7 +216,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MWEEPa9pSw3REpOqdkafzgqwOoBq37v1efdmNM/p0mrFfsWcp/V4YuEm9JP142I2OP4buCr/KgcLyT3YS6IeemICkckX6fQvPbVQpYFreo3XHNjRkbaUqaVR4ccN2x2Y.SVKv/aiQALYcRimIJklYgMNlcYGb6o8/A+n4slM76Qfo0rbyFtAfwx3dq3zZtFi7SzMO6q1kInikdMmPpYeZaP67TrQHiXIrqNWJQo6aVJ+/NO6KOolmwTjSFR/SZI3/">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vETfi0cTItBOg21lQ4MZcKAmuWomoWUvuoFNPHIVemJBPR7H1BNZuz83tgY5LCNjNbvz25vYbXgCE35blELuzY2MGExaTC8McToophSwGCPuQ/GUoX+V2esvOo58HiZ1.b6l4i2hfwzMW7QexkOH7WpYWvdx3YuOyhwUtzsGkXEEGfSsiX2SEVmUuPO2Hiq+lpYmZfxfj/RCyAq8eApHTNO/5z11WQQ8C8okb4HWcUwwFzJ+8C5x+WUMjwMgAHdpy">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
