create github pages

--- a/page8.html
+++ b/page8.html
@@ -10,15 +10,15 @@
   <meta name="description" content="Website Builder Description">
   
   <title>1a-Quarta-autoral-thequeen</title>
+  <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -257,7 +257,16 @@
                         <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">Vocalista, chefe do marketing e famoso por fazer os memes mais &nbsp;toscos do instagram da Lady Newton.</p>
                     </div>
 
-                    
+                    <div class="icon-box align-left">
+                        <div class="item">
+                            <span class="mbr-iconfont mobi-mbri-clock mobi-mbri"></span>
+                            <p class="date mbr-white mbr-fonts-style display-7">07-03-2020 12:00</p>
+                        </div>
+                        <div class="item">
+                            <a href="espacodofa.html#form3-g" target="_blank"><span class="mbr-iconfont icon54-v2-email-app-2"></span></a>
+                            <p class="date mbr-white mbr-fonts-style display-7"><a href="espacodofa.html#form3-g" class="text-white">Se inscrever na lista de e-mails</a></p>
+                        </div>
+                    </div>
 
 
                 </div>
@@ -319,8 +328,8 @@
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
   <script src="https://apis.google.com/js/plusone.js"></script>
   <script src="assets/facebook-plugin/facebook-script.js"></script>
