create github pages

--- a/1a-Quarta-autoral-thequeen.html
+++ b/1a-Quarta-autoral-thequeen.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="Estreia da "Quarta Autoral" com as bandas Paranozes, Baha! e Duque de Arake....Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
+  <meta name="description" content="Estreia da Quarta Autoral com as bandas Paranozes, Baha! e Duque de Arake....Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
 
  É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecosistema que envolve artistas, produtores, casas de shows e outros parceiros... E no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tantos espaços assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso.  
 
